@@ -1,0 +1,34 @@
+/*
+ * Copyright (c) 2014 Christian Schoenebeck
+ *
+ * http://www.linuxsampler.org
+ *
+ * This file is part of LinuxSampler and released under the same terms.
+ * See README file for details.
+ */
+
+#ifndef LS_INSTRSCRIPTVMFUNCTIONS_H
+#define LS_INSTRSCRIPTVMFUNCTIONS_H
+
+#include "../../common/global.h"
+#include "../../scriptvm/CoreVMFunctions.h"
+
+namespace LinuxSampler {
+
+    class InstrumentScriptVM;
+
+    class InstrumentScriptVMFunction_play_note : public VMEmptyResultFunction {
+    public:
+        InstrumentScriptVMFunction_play_note(InstrumentScriptVM* parent);
+        int minRequiredArgs() const { return 1; }
+        int maxAllowedArgs() const { return 4; }
+        bool acceptsArgType(int iArg, ExprType_t type) const { return type == INT_EXPR;}
+        ExprType_t argType(int iArg) const { return INT_EXPR; }
+        VMFnResult* exec(VMFnArgs* args);
+    protected:
+        InstrumentScriptVM* m_vm;
+    };
+
+} // namespace LinuxSampler
+
+#endif // LS_INSTRSCRIPTVMFUNCTIONS_H
